Raw update of News/Block_Contents endpoint merging
